--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="col-md-6 header-video">
-                <video autoplay muted loop playsinline class="bg-video">
+                <video autoplay muted loop playsinline preload="auto" class="bg-video">
                     <source src="{% static 'videos/hero.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -47,7 +47,7 @@
                         Review
                         <i class="fas fa-keyboard"></i>
                     </h5>
-                    <p class="card-text">A book and add a rating.</p>
+                    <p class="card-text">Review a book and add a rating.</p>
                     <a href="{% url 'add_review' %}" class="btn btn-primary">Review</a>
                 </div>
             </div>
