--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,6 +221,7 @@ p {
     
 }
 
+
 .image-flash {
     position: absolute;
     bottom: 5%;
@@ -300,7 +301,7 @@ p {
 .btn-edit {
     background-color: var(--highlight-color);
     color: var(--bg-color);
-    font-weight: 500;
+    font-weight: bold;
 }
 
 .btn-signup:hover,
@@ -346,6 +347,36 @@ p {
     color: rgb(222, 146, 168);
 }
 
+/* Footer */
+
+footer .social-border {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px; /* Adjust spacing as needed */
+}
+
+footer .social-links {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 15px; /* Adjust spacing between icons */
+}
+
+footer .social-links li {
+    display: inline-block;
+}
+
+footer .social-links li svg path {
+    transition: fill 0.3s ease;
+}
+
+footer .social-links li:hover svg path,
+footer .social-links li:active svg path {
+    fill: var(--highlight-color); 
+}
 /* Media */
 
 @media (max-width: 767px) {
@@ -383,24 +414,18 @@ p {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    /* Align to the left or you can adjust as needed */
     }
 
     .navbar-text p {
     margin: 0;
-    /* Remove default margin */
     white-space: nowrap;
-    /* Prevent the text from wrapping */
     }
 
     .header {
         display: flex;
         flex-direction: row;
-        /* Keeps layout horizontal */
         justify-content: flex-start;
-        /* Align items to the left */
         align-items: center;
-        /* Center items vertically */
         text-align: left;
     }
 
@@ -425,13 +450,10 @@ p {
 
     .header-video {
         width: 100%;
-        /* Ensure video container takes up full space */
         max-width: 500px;
-        /* Optional: limit max width of the video */
         aspect-ratio: 1 / 1;
-        /* Adjust the aspect ratio of the video */
         object-fit: cover;
-        /* Ensure the video covers the container properly */
+
     }
 
     .text-content {
@@ -440,10 +462,7 @@ p {
         justify-content: center;
         text-align: left;
     }
-}
-
-/* Card Adjustments for Tablet / Laptop (768px and up) */
-@media (min-width: 768px) and (max-width: 991px) {
+    
     .index-card {
         width: 100%; /* Ensure cards are wide enough */
     }
@@ -453,8 +472,22 @@ p {
     }
 }
 
-/* Card Adjustments for Large Screens */
-@media (min-width: 992px) {
+/* Media for  Laptop (1024px and up) */
+@media (min-width: 1024px) {
+
+    .litrpg-container {
+        max-width: 80%; 
+        margin: 0 auto;
+    }
+   
+    .what-title {
+        margin-top: 10%;
+    }
+
+    .what-title p {
+        font-size: larger;
+    }
+
     .index-card {
         width: 100%; /* Make cards full width in large screens */
     }
@@ -462,4 +495,6 @@ p {
         flex: 0 0 22%; /* Cards take up about 22% on large screens */
         margin-right: 2%; /* Add spacing between cards */
     }
+    
 }
+
