--- a/review/templates/review/add_review.html
+++ b/review/templates/review/add_review.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load star_ratings %}
 
 {% block content %}
 <div class="container mt-5">
