--- a/review/templates/review/review_list.html
+++ b/review/templates/review/review_list.html
@@ -3,39 +3,39 @@
 {% load cloudinary %}
 {% block content %}
 
-<!-- index.html content starts here -->
 <div class="container-fluid">
-    <div class="row">
+    <div class="row justify-content-center"> <!-- Center the row -->
         <!-- Review Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
+        <div class="col-12 mt-3">
+            <div class="row justify-content-center"> <!-- Center the cards in the row -->
                 {% for review in review_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4" style="width: 15rem;">
-                        <div class="image-container">
-                            {% if review.book.book_cover %}
-                            {% cloudinary review.book.book_cover class="card-img-top" alt=review.title %}
-                            {% else %}
-                            <img src="{% static 'images/default.jpg' %}" class="card-img-top" alt="placeholder image">
-                            {% endif %}
-                            <div class="image-flash">
-                                <p class="author">Author: {{ review.user }}</p>
+                <div class="col-md-4 d-flex justify-content-center"> <!-- Ensure equal column sizes -->
+                    <div class="card mb-3 review-card" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                {% if review.book.book_cover %}
+                                    {% cloudinary review.book.book_cover class="img-fluid rounded-start cover-image" alt=review.title %}
+                                {% else %}
+                                    <img src="{% static 'images/default.jpg' %}" class="img-fluid rounded-start cover-image" alt="placeholder image">
+                                {% endif %}
                             </div>
-                        </div>
-                        <div class="card-body">
-                            <a href="{% url 'review_detail' review.slug %}" class="post-link">
-                                <h2 class="card-title">{{ review.title }}</h2>
-                                <p class="card-text">{{ review.excerpt }}</p>
-                            </a>
-                            <hr />
-                            <p class="card-text text-muted h6">{{ review.created_on }}</p>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <a href="{% url 'review_detail' review.slug %}" class="post-link">
+                                        <h5 class="card-title">{{ review.title }}</h5>
+                                        <p class="card-text">{{ review.excerpt }}</p>
+                                    </a>
+                                    <hr />
+                                    <p class="card-text text-muted h6">{{ review.created_on }}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 {% if forloop.counter|divisibleby:3 and not forloop.last %}
             </div>
-            <div class="row">
+            <div class="row justify-content-center"> <!-- Create a new row after every third card -->
                 {% endif %}
                 {% endfor %}
             </div>
@@ -46,11 +46,11 @@
                 <ul class="pagination justify-content-center">
                     {% if page_obj.has_previous %}
                     <li>
-                        <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+                        <a href="?page={{ page_obj.previous_page_number }}" class="page-link btn btn-page">PREV</a>
                     </li>
                     {% endif %}
                     {% if page_obj.has_next %}
-                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link btn btn-page"> NEXT</a></li>
                     {% endif %}
                 </ul>
             </nav>
@@ -59,5 +59,4 @@
     </div>
 </div>
 
-<!-- index.html content ends here -->
 {% endblock %}
