--- a/static/css/style.css
+++ b/static/css/style.css
@@ -216,11 +216,28 @@ p {
     text-align: left; /* Center Text in Cards */
 }
 
+.review-card {
+    border: 2px solid var(--secondary-color); /* Border Color */
+    border-radius: 10px; /* Rounded Corners */
+    margin: 20px auto; /* Margin Around Card */
+    background-color: #292a33; /* Card Background */
+    transition: all 0.3s ease; /* Smooth Transition */
+    text-align: left; /* Center Text in Cards */
+}
+
+.cover-image {
+    width: 100%;
+    height: 235px; /* Let image container take full height */
+    object-fit: cover; /* Ensures the image covers the container without distortion */
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    min-height: 200px; /* Ensure the image container has a consistent height */
+}
+
 .image-container {
     position: relative;
     
 }
-
 
 .image-flash {
     position: absolute;
@@ -337,6 +354,13 @@ p {
     color: #e84610;
     background: transparent;
     border: none;
+}
+
+.btn-page {
+    color:var(--bg-color);
+    border: 1px solid var(--accent-color);
+    background: var(--secondary-color);
+    font-weight:bold;
 }
 
 .stars i {
@@ -505,4 +529,7 @@ footer .social-links li:active svg path {
     }
     
 }
+
+
+
 
