--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -227,7 +227,7 @@ p {
 
 .cover-image {
     width: 100%;
-    height: 100%; /* Let image container take full height */
+    height: 235px; /* Let image container take full height */
     object-fit: cover; /* Ensures the image covers the container without distortion */
     border-top-left-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
@@ -354,6 +354,13 @@ p {
     color: #e84610;
     background: transparent;
     border: none;
+}
+
+.btn-page {
+    color:var(--bg-color);
+    border: 1px solid var(--accent-color);
+    background: var(--secondary-color);
+    font-weight:bold;
 }
 
 .stars i {
